--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			    </div>
 			    <div class="collapse navbar-collapse" id="myNavbar">
 			      <ul class="nav navbar-nav navbar-right">
-			        <li><a href="#"><i class="fa fa-question-circle"></i><span class="blue">Support</span></a></li>
+			        <li><a href="#"><i class="fa fa-question-circle"></i><span class="blue">Supports</span></a></li>
 			        <li><a href="#"><i class="fa fa-user"></i><span class="blue">Login/Signup</span></a></li>
 			      </ul>
 			      <div class="lh20">&nbsp;</div>
